--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "contentlayer": "^0.3.4",
+    "lucide-react": "^0.300.0",
     "next": "14.0.4",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
